
  ChangeLog for the spinning_mcmc repository.  
  Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
        
    48: sluys, 07/07/2008
     - Made some small changes (cleaning?) to the 15-waveform routines to see if 
       it changes anything
     
    47: sluys, 25/06/2008
     - Added routines to compute overlap, match and Fisher matrix to mcmc_signal
     - Cleaned up template12() and localpar() in mcmc_templates
     - Renamed this file to more default ChangeLog.txt
         
    46: sluys, 07/06/2008
     - Changed name and contents of *PSD.dat:
       - signalPSD.dat and dataPSD.dat have PSD replaced by FFT
       - these files contain real and imaginary parts of the amplitude spectrum
       - noisePSD.dat is now noiseASD.dat, because in contains the amplitudes
       - to get compatible amplitudes, all values are a factor sqrt(2) higher
       - all output is no longer logged (incl. f)
    
    41: sluys, 19/05/2008
     - Made waveform_main uptodate
       
    37: sluys, 16/05/2008
     - Merging 3.5PN code into svn, step 2
     - Old 1.5PN is used, references to 3.5PN commented out for now
     
    36: vivien, 16/05/2008
     - Merging 3.5PN code into svn, step 1	
     
    35: sluys, 13/05/2008
     - I changed the boundaries for \eta in the previous commit, changed them back
       since chains get stuck at very low \eta and very high L	 
     - Fixed two small memory leaks
    
    34: sluys, 09/05/2008
     - The input parameter saveallchains was renamed to savehotchains. If 0 (save
       T=1 chain only) or 1 (save all parallel chains) the effect is the same as
       before. However, savehotchains=n saves 1 in every n states for the T>1 chains
       for each T=1 state (i.e. extra thinning for the hotter chains)
     - The boundary conditions in prior() changed: only one 'bounce off the wall' is
       allowed, if the parameter is then not between the BCs, prior = 0