@@ -81,7 +81,7 @@ void template12(struct parset *par, struct interferometer *ifo[], int ifonr)
   //printf("  %lf  %lf  %lf  %lf  %lf  %lf  %lf  %lf  %lf  %lf  %lf  %lf",
   // par->mc,par->eta,par->tc,par->logdl,par->spin,par->kappa,par->longi,par->sinlati,par->phase,par->sinthJ0,par->phiJ0,par->alpha);
   
-  double beta = 1.0/12.0*(113.0*(m1*m1)/(M*M) + 75.0*par->eta)*par->kappa*spin/(m1*m1);                                 // Eq.20, for S2=0 or m1=m2,S1=S2:  kappa*spin/(m1*m1) = L^.S/m1^2
+  double beta = 1.0/12.0*(113.0*(m1*m1)/(M*M) + 75.0*par->eta)*par->kappa*spin/(m1*m1);                                 // Eq.20, for S2=0 or m1=m2,S1=S2:  kappa*spin/(m1*m1) = L^.S/m1^2, see Blanchet et al., PRL 74, 3515, 1995
   
   double cst1 = 743.0/336.0 + 11.0/4.0*par->eta;
   double cst2 = (4.0*pi-beta);
@@ -280,71 +280,6 @@ void template12(struct parset *par, struct interferometer *ifo[], int ifonr)
 
 
 
-
-
-void template15(struct parset *par, struct interferometer *ifo[], int ifonr)
-//Use the LAL 3.5/2.5 PN spinning waveform, with 2 spinning objects (15 parameters)
-{
-  int i=0;
-  double localtc=0.0,samplerate=0.0,inversesamplerate=0.0;
-  int length=0;
-  
-  samplerate = (double)ifo[ifonr]->samplerate;
-  inversesamplerate = 1.0/samplerate;
-  length     = ifo[ifonr]->samplesize;
-  //printf("length = %d\n",length);
-  
- // double hplusLAL[length+2];
- // double hcrossLAL[length+2];
-  //double wave[length+2];
-  double *wave = (double*)calloc(length+2,sizeof(double));  //MvdS: should this make a difference? Vivien: no it shouldn't.
-  int lengthLAL = 0;
-  
-  CoherentGW thewaveform;
-  
-  // Compute h_+ and h_x
-  //LALHpHc(&thewaveform, hplusLAL, hcrossLAL, &lengthLAL, length, par, ifo[ifonr], ifonr);
-  LALHpHc(&thewaveform, &lengthLAL, par, ifo[ifonr]);  //MvdS: ifonr never used. This routine computes and returns hplusLAL, hcrossLAL, which are never used... However, this information should also be contained in thewaveform
-																					//Vivien: ifonr is only used in a commented printf to know which interferometer called the routine. Just for debugging purposes
-																					//Vivien: hplusLAL and hcrossLAL are indeed unecessary (was before I used the structure thewaveform)
-																					
-   
-  // Compute the detector response
-  //double delay = LALFpFc(&thewaveform, wave, &lengthLAL, length, par, ifonr);
-  double delay = LALFpFc(&thewaveform, wave, length, par, ifonr); //MvdS: lengthLAL never used or set. Uses waveforms in thewaveform to compute the detector response in wave (?)
-																	//Vivien: lentghLAL is set line 535 of LALinteface.c But is is also availble in the structure thewaveform (which holds h+,x) and the structure wave (which holds F+,x)
-  
-  // printf("LALdelay = %10.10f\n", delay);
-  
-  LALfreedom(&thewaveform);
-  
-  // printf("localtc = %f\n", localtc);
-  
-  localtc = ((par->tc - ifo[ifonr]->FTstart) - delay);
-  
-  int indexstart;
-  indexstart = (int) (localtc/inversesamplerate - (double)lengthLAL);   //MvdS: lengthLAL is used here, but seems never to be set in LALFpFc. Is it set in LALHpHc? Vivien: Yes it is (line 535) but it is also available in thewaveform and wave
-  if (indexstart<0) indexstart = 0;
-  
-  //printf("localtc2 = %f\n", localtc2);
-  //printf("i1 = %d\n", i1);
-  //printf("indexstart = %d\n" , indexstart);
-  //printf("ifo[%d]->FTstart = %f\n", ifonr, ifo[ifonr]->FTstart);
-  //printf("lengthLAL = %d\n", lengthLAL);
-  //printf("length: %d,  lengthLAL: %d,  i1: %d,  i2: %d\n", length, lengthLAL,indexstart, indexstart+lengthLAL);
-  
-  for (i=0; i<length; ++i){
-    //MvdS:  Reduce the number of if statements:
-    //if(i<indexstart) ifo[ifonr]->FTin[i]   = 0.0;
-    //if(i>=indexstart && i<(indexstart+lengthLAL)) ifo[ifonr]->FTin[i] = wave[i-indexstart];
-    //if(i>=(indexstart+lengthLAL)) ifo[ifonr]->FTin[i]   = 0.0;
-    ifo[ifonr]->FTin[i] = 0.0;
-    if(i>=indexstart && i<(indexstart+lengthLAL)) ifo[ifonr]->FTin[i] = wave[i-indexstart];
-  }
-  
-  free(wave);
-  
-}
 
 
 
